# matic

./: .env.sample  .gitignore  README.md  docker-compose-down.sh  docker-compose-up.sh  docker-compose.dev.yml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 00001_auth.down.sql  00001_auth.up.sql  00002_seed_initial_roles.down.sql  00003_category.up.sql  00004_seed_categories.up.sql  00005_tags.up.sql  00006_activities.down.sql  00006_activities.up.sql  00007_project.down.sql  00007_project.up.sql  00008_todo.down.sql  00008_todo.up.sql  0002_seed_initial_roles.sql
backend/src/: main.rs  state.rs
backend/src/config/: mod.rs
backend/src/error/: mod.rs
backend/src/handlers/: health.rs  mod.rs
backend/src/handlers/auth/: create_first_admin.rs  login.rs  me.rs  mod.rs
backend/src/middleware/: authenticate.rs  authorize.rs
backend/src/models/: auth.rs
backend/src/routes/: auth.rs  health.rs  mod.rs  user.rs
backend/src/services/auth/: mod.rs  password.rs  role.rs  user.rs
docker/backend/: Dockerfile
docker/db/: Dockerfile
docker/db_dashboard/: Dockerfile
docker/db_dashboard/plugins/: auto-login.php
docker/frontend/: Dockerfile
frontend/: eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/composables/: useApi.ts
frontend/certs/: localhost.conf  localhost.crt  localhost.key
