[package]
name = "matic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = "0.12.3"
axum-login = "0.18.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
cookie = "0.18.1"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lettre = "0.11.19"
multer = "3.1.0"
rand = "0.9.2"
redis = { version = "1.0.1", features = ["tokio-comp"] }
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid"] }
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
